--- a/pagina html/style.css
+++ b/pagina html/style.css
@@ -97,3 +97,16 @@ h2{
     }
 }
 
+.link{
+    display: flex;
+    flex-direction: column;
+    height: 50px;
+    width: 300px;
+    padding: 3px;
+    margin: 0;
+    transform: translateX(69rem);
+}
+.img{
+    width: 50px;
+    height: 50px;
+}
