--- a/docs/pagina html/estilo/style.css
+++ b/docs/pagina html/estilo/style.css
@@ -22,6 +22,7 @@ body{
 }
 a{
     margin: 10px;
+    color: #ffffff;
 }
 hr{
     height: 5px;
@@ -96,17 +97,39 @@ h2{
         transition: none;
     }
 }
-
 .link{
-    display: flex;
-    flex-direction: column;
-    height: 50px;
-    width: 300px;
-    padding: 3px;
-    margin: 0;
-    transform: translateX(69rem);
+    text-align: right;
 }
 .img{
     width: 50px;
     height: 50px;
+}
+#sec{
+    background-color: rgb(30, 201, 231);
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px;
+    font-weight: bolder;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 5px;
+    padding: 8px;
+
+}
+
+#li{
+    background-color: #313131;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 45px;
+    border-radius: 2px;
+    text-align: center;
+    margin: 2px;
+    padding:5px;
+    transition: all 0.3 ease-in-out;
+
+}
+#li:hover{
+    background-color:transparent;
+    transition: all 0.3 ease-in-out;
 }
