--- a/docs/restilo/style.css
+++ b/docs/restilo/style.css
@@ -1,25 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap');
 
 *{
-    text-align: center;
     font-family: 'Noto Sans', sans-serif;
     
     
 }
 body{
     height: 100vh;
+    max-width: 1250px;
     background-image: linear-gradient(45deg,rgb(255, 239, 94), rgb(30, 63, 82));
     display: flex;
     flex-direction: column;
     font-weight: bolder;
 }
-
+div{
+    text-align: center;
+    
+}
 span{
-    height: 15px;
     background-color: rgba(99, 99, 93, 0.8);
     box-shadow: 5px 5px 5px;
     padding: 15px;
-    margin: 5px;  
+    margin: 50px;  
+    position: relative;
 }
 #data{
     font-size: 20px;
