--- a/docs/restilo/style.css
+++ b/docs/restilo/style.css
@@ -7,7 +7,8 @@
 }
 body{
     height: 100vh;
-    max-width: 720px;
+    min-width: 150vh;
+    max-width: 1250px;
     background-image: linear-gradient(45deg,rgb(255, 239, 94), rgb(30, 63, 82));
     display: flex;
     flex-direction: column;
