--- a/docs/restilo/style.css
+++ b/docs/restilo/style.css
@@ -18,6 +18,7 @@ body{
 div{
     text-align: center;
     margin: 20px 5px;
+    max-width: max-content;
     
 }
 span{
@@ -32,7 +33,9 @@ span{
 }
 
 #Horas{
-    font-size: 70px;
+    font-size: 60px;
+    width: -moz-fit-content;
+    width: fit-content;
 }
 
 img{
