--- a/docs/pagina html/estilo/style.css
+++ b/docs/pagina html/estilo/style.css
@@ -8,7 +8,14 @@
 body{
     background-color: rgb(95, 149, 201);
     min-height: 100vh;
-    background-image: linear-gradient(45deg,rgb(95, 149, 201), rgb(223, 157, 157));
+    background-image: linear-gradient(to right,#EBBFB5,#E8AF90,#E0B696);
+    background-attachment: fixed;
+}
+header{
+    background-color: #97D1A4;
+    height: max-content;
+    margin: 5px;
+    padding: 5px;
 }
 #hora{
     text-align: right;
