--- a/docs/pagina html/estilo/style.css
+++ b/docs/pagina html/estilo/style.css
@@ -12,7 +12,7 @@ body{
     background-attachment: fixed;
 }
 header{
-    background-color: #97D1A4;
+    background-color: #299da5bd;
     height: max-content;
     margin: 5px;
     padding: 5px;
@@ -46,7 +46,7 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #7a817b;
+    background-color: #299da5;
     margin: 15px;
     width:270px;
     padding: 15px;
@@ -81,7 +81,7 @@ h2{
     padding: 10px;
     border-radius: 2px;
     margin-top: 15px;
-    background-color: #47c2e7;
+    background-color: #D1C6A1;
     color: #313131;
     font-weight: bold;
     font-size: 16px;
@@ -112,7 +112,7 @@ h2{
     height: 50px;
 }
 #sec{
-    background-color: rgb(30, 201, 231);
+    background-color: #37DFEB;
     border-radius: 15px;
     box-shadow: 5px 5px 5px;
     font-weight: bolder;
