--- a/docs/restilo/style.css
+++ b/docs/restilo/style.css
@@ -9,31 +9,37 @@
 body{
     height: 100vh;
     background-image: linear-gradient(45deg,rgb(255, 239, 94), rgb(30, 63, 82));
-    display: flex;
-    flex-direction: column;
     font-weight: bolder;
     position: relative;
+    transition: all 1s;
+    max-width: 1200px;
+    min-width: 400px;
 }
 div{
     text-align: center;
     margin: 10px;
-    
-}
-span{
     background-color: rgba(99, 99, 93, 0.8);
-    box-shadow: 5px 5px 5px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.575);
+    max-width: 1200px;
+    min-width:400px ;
     padding: 15px;
-    margin: 50px;  
-    
+    margin: 50px;
 }
+
 #data{
     font-size: 20px;
+    width: -moz-fit-content;
+    width: fit-content;
+    min-width: 100px;
+    margin: auto;
 }
 
 #Horas{
     font-size: 60px;
     width: -moz-fit-content;
     width: fit-content;
+    min-width: 300px;
+    margin: auto;
 }
 
 img{
