--- a/docs/restilo/style.css
+++ b/docs/restilo/style.css
@@ -8,11 +8,11 @@
 }
 body{
     height: 100vh;
+    width: 100%;
     background-image: linear-gradient(45deg,rgb(255, 239, 94), rgb(30, 63, 82));
     font-weight: bolder;
     position: relative;
     transition: all 1s;
-    max-width: 1200px;
     min-width: 400px;
 }
 div{
