--- a/docs/pagina html/topfrutas/top/style.css
+++ b/docs/pagina html/topfrutas/top/style.css
@@ -20,9 +20,11 @@ article{
     border-radius: 10px;
 }
 h2{
+    color: black;
     margin: 5px;
 }
 h3{
+    color: black;
     margin: 5px;
 }
 #nana{
