--- a/docs/pagina html/topfrutas/top/style.css
+++ b/docs/pagina html/topfrutas/top/style.css
@@ -18,9 +18,16 @@ article{
     max-width: 800px;
     text-align: justify;
     border-radius: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
-#main{
+.main{
     color: black;
+}
+a{
+    color: black;
+}
+a:hover{
+    color: gray;
 }
 h2{
     color: black;
