--- a/docs/pagina html/topfrutas/top/style.css
+++ b/docs/pagina html/topfrutas/top/style.css
@@ -46,10 +46,10 @@ h3{
     color: rgb(160, 106, 115);
 }
 #mid{
-    color: orange;
+    color: rgb(175, 114, 0);
 }
 #mama{
-    color: lightsalmon;
+    color: rgb(133, 77, 55);
 }
 div{
     border-radius: 7px;
