--- a/docs/pagina html/pag2es/stilo/style.css
+++ b/docs/pagina html/pag2es/stilo/style.css
@@ -14,6 +14,9 @@ header.active{
     background-color: rgba(216, 166, 0, 0.795);
     transition: all 0.1s;
 }
+main{
+    margin: 0;
+}
 h1{
     font-size: 20px;
 }
