--- a/docs/pagina html/topfrutas/top/style.css
+++ b/docs/pagina html/topfrutas/top/style.css
@@ -9,13 +9,21 @@ body{
     background-image: none;
 }
 header{
-    margin: 0;
-    border: 3px solid black;
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    text-align: center;
+    border: 2px solid black;
 }
-nav>a{
-    color: white;
-    font: normal 20px 'Oswald', sans-serif;
+header h1{
+    margin: auto;
+    text-align: center;   
+}
+header>nav>a{
     text-decoration: none;
+    font-size: 20px;
+    color: #fff;
+    margin: 50% 0% 0% 0%;
 }
 main{
     margin: auto;
