--- a/docs/pagina html/NCV2/estilo/estilo.css
+++ b/docs/pagina html/NCV2/estilo/estilo.css
@@ -11,7 +11,7 @@ body{
 }
 #res{
     background-color: white;
-    width:190px;
+    min-width:190px;
     height: 30px;
     color: black;
     margin: 5px;
