--- a/docs/pagina html/NCV2/estilo/estilo.css
+++ b/docs/pagina html/NCV2/estilo/estilo.css
@@ -13,6 +13,7 @@ body{
     background-color: white;
     min-width:190px;
     height: 30px;
+    max-height: 30px;
     color: black;
     margin: 5px;
     padding: 5px;
